--- a/.github/workflows/fetch_solar_data.yml
+++ b/.github/workflows/fetch_solar_data.yml
@@ -1,9 +1,13 @@
 name: Fetch Solar Data Hourly
 
+# Give GitHub Actions permission to push changes
+permissions:
+  contents: write
+
 on:
   schedule:
-    - cron: '0 * * * *'  # every hour on the hour UTC
-  workflow_dispatch:
+    - cron: '0 * * * *'  # Runs every hour on the hour (UTC)
+  workflow_dispatch:      # Optional: allows manual triggering
 
 jobs:
   fetch-solar-data:
@@ -18,13 +22,13 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: pip install requests pandas
 
       - name: Run data fetch script
         run: python fetch_solar.py
 
-      - name: Commit and push updated database
+      - name: Commit and push updated solar data
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
