--- a/.github/workflows/fetch_solar_data.yml
+++ b/.github/workflows/fetch_solar_data.yml
@@ -22,19 +22,24 @@ jobs:
           python-version: '3.11'
 
       - name: 📦 Install dependencies
-        run: pip install requests pandas
+        run: pip install requests pandas pyarrow duckdb python-dateutil
 
       - name: ⏰ Fetch hourly solar PV data (Spain local day)
         env:
           ESIOS_API_TOKEN: ${{ secrets.ESIOS_API_TOKEN }}
         run: python scripts/collect_today_hourly.py
 
+      - name: ➕ Append new solar data (yesterday + today) to full database
+        run: python scripts/append_solar_hourly.py
+
       - name: 📤 Commit and push updated data
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add data/
-          git commit -m "🕐 Update hourly solar file: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
+          git add database/
+          git commit -m "☀️ Update solar data: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git pull --rebase --autostash
           git push
+
 
