--- a/.github/workflows/fetch_solar_data.yml
+++ b/.github/workflows/fetch_solar_data.yml
@@ -30,6 +30,8 @@ jobs:
         run: python scripts/collect_today_hourly.py
 
       - name: ➕ Append new solar data (yesterday + today) to full database
+        env:
+          ESIOS_API_TOKEN: ${{ secrets.ESIOS_API_TOKEN }}
         run: python scripts/append_solar_hourly.py
 
       - name: 📤 Commit and push updated data
@@ -38,8 +40,9 @@ jobs:
           git config user.email "actions@github.com"
           git add data/
           git add database/
-          git commit -m "☀️ Update solar data: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
+          git commit -m "☀️ Append new hourly solar data from API: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git pull --rebase --autostash
           git push
+
 
 
