--- a/.github/workflows/fetch_solar_data.yml
+++ b/.github/workflows/fetch_solar_data.yml
@@ -29,10 +29,8 @@ jobs:
           ESIOS_API_TOKEN: ${{ secrets.ESIOS_API_TOKEN }}
         run: python scripts/collect_today_hourly.py
 
-      - name: ➕ Append new solar data (yesterday + today) to full database
-        env:
-          ESIOS_API_TOKEN: ${{ secrets.ESIOS_API_TOKEN }}
-        run: python scripts/append_solar_hourly.py
+      - name: 🧹 Tidy + merge all daily files into main database
+        run: python scripts/tidy_merge_all.py
 
       - name: 📤 Commit and push updated data
         run: |
@@ -40,7 +38,7 @@ jobs:
           git config user.email "actions@github.com"
           git add data/
           git add database/
-          git commit -m "☀️ Append new hourly solar data from API: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
+          git commit -m "☀️ Tidy + merge solar hourly data: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git pull --rebase --autostash
           git push
 
