--- a/.github/workflows/fetch_solar_data.yml
+++ b/.github/workflows/fetch_solar_data.yml
@@ -29,7 +29,7 @@ jobs:
           ESIOS_API_TOKEN: ${{ secrets.ESIOS_API_TOKEN }}
         run: python scripts/collect_today_hourly.py
 
-      - name: 🧹 Tidy + merge all daily files into main database
+      - name: ➕ Tidy + append new solar data to full database
         run: python scripts/append_solar_hourly.py
 
       - name: 📤 Commit and push updated data
@@ -38,9 +38,6 @@ jobs:
           git config user.email "actions@github.com"
           git add data/
           git add database/
-          git commit -m "☀️ Tidy + merge solar hourly data: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
+          git commit -m "☀️ Append + merge solar data: $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git pull --rebase --autostash
           git push
-
-
-
