--- a/.github/workflows/fetch_historical_solar_hourly.yml
+++ b/.github/workflows/fetch_historical_solar_hourly.yml
@@ -4,10 +4,10 @@ permissions:
   contents: write
 
 on:
-  workflow_dispatch:  # Manual trigger only for now
+  workflow_dispatch:  # Manual trigger
 
 jobs:
-  fetch-raw-true-solar:
+  fetch-raw-real-solar:
     runs-on: ubuntu-latest
 
     env:
@@ -25,15 +25,16 @@ jobs:
       - name: 📦 Install dependencies
         run: pip install requests pandas python-dateutil
 
-      - name: ☀️ Fetch raw real solar PV (2526)
+      - name: ☀️ Fetch real solar PV hourly (2526)
         run: python scripts/fetch_historical_solar_hourly.py
 
       - name: 📤 Commit to database
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add database/solar_raw_2526.csv
-          git commit -m "☀️ Real solar PV (2526)" || echo "No changes"
+          git add database/ || echo "No raw file to commit"
+          git commit -m "☀️ Add real PV (2526): $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git pull --rebase --autostash
           git push
+
 
